--- a/resources/scss/components/main/_catalog.scss
+++ b/resources/scss/components/main/_catalog.scss
@@ -3,6 +3,11 @@
     background: linear-gradient(90deg, rgba(93,11,149,0.78) 0%, rgba(199,88,88,1) 50%, rgba(139,85,8,0.91) 100%);
 }
 
+.catal {
+    padding: 32px 0;
+    background: linear-gradient(90deg, rgba(93,11,149,0.78) 0%, rgba(199,88,88,1) 50%, rgba(139,85,8,0.91) 100%);
+}
+
 .catalog__heading {
     margin: 0 0 16px;
     color: #fff;
@@ -114,8 +119,6 @@
 .product__button:hover{
     background-color: var(--colorHover);
 }
-
-
 
 .product__buy {
     position: absolute;
